# CVA-Project-

./: .env.example  .gitignore  Dockerfile  README.md  SENTINEL_INTELLIGENCE_PROJECT.md  SYNOPSIS.md  UPGRADE_PLAN.md  UPGRADE_SUMMARY.md  alembic.ini  docker-compose.yml  push_to_github.bat  pyproject.toml  requirements.txt  run_dev.ps1  start.js
.github/workflows/: cd.yml  ci.yml  docs.yml
alembic/: env.py
alembic/versions/: 20250101_000000_initial_migration.py  20250101_000001_add_user_organization_tables.py  20250102_000000_add_organization_id_to_inference_runs.py
disaster_recovery/: test_backup_restore.sh
frontend/: PLAN.md  README.md  middleware.ts  package-lock.json  package.json
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  providers.tsx
frontend/components/: Navbar.tsx  Sidebar.tsx
frontend/lib/: utils.ts
frontend/types/: index.ts  metrics.ts
grafana/alerts/: alert_rules.yml
grafana/dashboards/: overview.json  performance.json
loadtests/: locust.conf  locustfile.py  run_locust.sh
pipelines/: metrics_aggregation.py  run_aggregation.sh
prometheus/: prometheus.yml
scripts/: backup_minio.sh  backup_postgres.sh  deploy.sh  generate_docs.py  seed_realistic_data.py
terraform/: ecs.tf  iam.tf  load_balancer.tf  main.tf  outputs.tf  rds.tf  s3.tf  ssm.tf  terraform.tfvars.example  variables.tf  vpc.tf
traefik/: traefik.yml
vision_monitor/: .env.example  requirements.txt  sentinel.db
vision_monitor/app/: __init__.py  config.py  database.py  main.py
vision_monitor/tests/: conftest.py  test_alerts.py  (+3 more)
(+117 files in other folders)
