[project]
name = "vision-monitor"
version = "1.0.0"
requires-python = ">=3.11"
description = "Vision + LLM Monitoring System"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["vision_monitor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
strict = false
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "influxdb_client.*",
    "minio.*",
    "pinecone.*",
    "celery.*",
    "langfuse.*",
    "httpx.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["vision_monitor/tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
